HHH-19879: Move Hibernate Tools' reveng module to Hibernate ORM and merge the relevant ant/gradle/maven plugins   - Transfer all the unit tests
Signed-off-by: Koen Aers <koen.aers@gmail.com>